quassel (1:0.12.3-2) UNRELEASED; urgency=medium

  * quassel-core: Add libqt5sql5-psql to Suggests since PostgreSQL is supported
    as an alternative backend. (Closes: #552374)

 -- Felix Geyer <fgeyer@debian.org>  Sat, 13 Feb 2016 16:09:33 +0100

quassel (1:0.12.3-1) unstable; urgency=medium

  * New upstream release.
  * Drop patches that have been applied upstream:
    - 02_set-required-libs-and-flags.patch
    - 04_fix_ftbfs_qt55.patch
    - CVE-2015-8547.patch

 -- Felix Geyer <fgeyer@debian.org>  Thu, 11 Feb 2016 21:38:13 +0100

quassel (1:0.12.2-3) unstable; urgency=high

  * Fix CVE-2015-8547: op command denial of service issue (Closes: #807801)
    - Add CVE-2015-8547.patch

 -- Felix Geyer <fgeyer@debian.org>  Mon, 14 Dec 2015 21:25:33 +0100

quassel (1:0.12.2-2) unstable; urgency=medium

  * Fix FTBFS with Qt 5.5. (Closes: #802868)
    - Add 04_fix_ftbfs_qt55.patch

 -- Felix Geyer <fgeyer@debian.org>  Thu, 29 Oct 2015 17:05:50 +0100

quassel (1:0.12.2-1) unstable; urgency=medium

  [ Felix Geyer ]
  * New upstream release. (Closes: #779726)
  * Remove patches that have been applied upstream:
    - CVE-2014-8483.patch
    - CVE-2015-2778.patch
    - CVE-2015-3427.patch
  * Set maintainer to Debian KDE Extras Team.
  * Add Vcs control fields pointing to the new git packaging repo.
    (Closes: #732605)
  * Drop explicit phonon depenencies, they are automatically added.
  * Build quassel against Qt5 + KF5 libs instead of a Qt4 and a KDE4 variant.
    (Closes: #784519)
    - Remove quassel-data-kde4.
    - Turn quassel-kde4 and quassel-client-kde4 into transitional packages.
  * Enable parallel building.
  * Pass --fail-missing to dh_install.
  * Create the SSL certificate as user quasselcore to avoid a symlink race
    condition. (Closes: #753737)
  * Stop hardcoding the path to deluser / delgroup in postrm.
  * Enable all hardening build flags.
  * Build with -Wl,--as-needed.
  * Fix detection of OpenSSL when building against Qt5.