@@ -2,6 +2,7 @@ quassel (1:0.12.3-2) UNRELEASED; urgency=medium
 
   * quassel-core: Add libqt5sql5-psql to Suggests since PostgreSQL is supported
     as an alternative backend. (Closes: #552374)
+  * Pass service name to dh_systemd_*. (Closes: #811149)
 
  -- Felix Geyer <fgeyer@debian.org>  Sat, 13 Feb 2016 16:09:33 +0100
 
